app/assets/stylesheets/common.scss
/* ... */
.el-card__body {
  padding: 15px !important;
}
.pg-content {
  width: 100%;
  height: 20px;
  font-weight: bold;
}
.progress-bar {
  color: black;
}
.icon-btn {
  background: #fff;
  cursor: pointer;
  height: 30px;
  width: 30px;
  font-size: 18px;
  justify-content: center;
  box-shadow: 0 1px 5px rgba(0,0,0,0.65) !important;
  &:hover {
    background: #f4f4f4;
  }
}

.grid-container {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-row-gap: 1em;
  grid-column-gap: 1em;
}


// Portfolio page is on _landing.html.slim file
.portfolio-page {
  box-shadow: 0 2.5px 5px rgba(56,56, 56,0.19), 0 3px 3px rgba(56,56,56,0.23); 
  transition: all .2s ease-in
}
.portfolio-page:hover { 
  transform: scale(1.015); 
}

.program-name a {
 text-decoration: none !important;
 text-decoration-color: none !important;
}

.program-name a:active {
  text-decoration: none !important;
  text-decoration-color: none !important;
 }
 .program-name a:visited {
  text-decoration: none !important;
  text-decoration-color: none !important;
 }

 .program-name a:hover {
  text-decoration: none !important;
  text-decoration-color: none !important;
 }
 .program-name a:link {
  text-decoration: none !important;
  text-decoration-color: none !important;
 }

.lt-green {
  background-color: #90EE90
}
.lt-yellow {
  background-color: #FFFACD
}
.lt-red {
  background-color: #FFA07A
}
 .fafa {
  //  background-color: #fafafa;
   background-color:#e9ecef
 }

 .light-gray {
   color: rgb(24, 19, 19);
 }

.el-collapse-item__header {color:#0275d8 !important}
.el-collapse {
  border-top: none !important;
  border-bottom: 1px solid #EBEEF5;
}
.brand-sidebar {
  background-image: url('map-image.png');
  background-size: auto;
  background-repeat: no-repeat;
  background-position: center;
  margin: 60px 50px;
  width: 70vw;
}
.auth-sidebar {
  width: 30vw;
  float: right;
  margin: 60px 50px;
}
.btn-social {
  display: flex;
  align-items: center;
  width: 100%;
  justify-content: center;
}
.fav-btn {
  display: flex;
  align-items: center;
  color: rgba(0, 0, 0, 0.5);
  border-radius: 10rem;
  padding: 0.25rem 0.6rem;
  font-size: 0.875rem;
  line-height: 1.25;
  background-color: #f8f9fa;
  border-color: #f8f9fa;
  &:hover {
    color: rgba(0, 0, 0, 0.7);
    background-color: #e2e6ea;
    border-color: #dae0e5;
  }
}
.fbody-icon {
  font-size: 15px;
  color: gray;
  margin-right: 10px;
}

// Tabbed out form inside modals
.tab2, .tab3, .tab4, .tab5, .tab6 {
  min-height: 400px;
  background-color: #fff;
}
// Tabbed out form inside modals
.paperLookTab {
  // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  padding-bottom: 20px;
  margin-bottom: 10px;
  position: relative;
  background-color: #fff;
}

.action-form-overlay {
  position: absolute;
  top:0;
 } 
 .updateForm {
  width: 102% !important;
  margin-top: -15px;
  margin-left: -34px;
 } 
 .risks-form, .tasks-form, .issues-form, #risks-form, .notes-form {
  background-color: #fff;
  position:fixed;
  height: 100vh;
}
.risks-form {
  z-index: 10;
  width: 83.1%;
 }

.warning-icon {
  font-size: 16px;
  color: #dc3545;
}
.crud-actions {
  display: flex;
  justify-content: flex-end;
  color: gray;
  span {
    cursor: pointer;
  }
}
.delete-action:hover {
  color: red;
}
.edit-action:hover {
  color: blue;
}
.pac-container {
  z-index: 100000;
}

.signup-section,
.signin-section {
  .form-signin {
    margin-top: 10vh;
    width: 450px;
    display: block;
    background-color: #f7f7f7;
    box-shadow: 0 0 3px 3px #888;
    border-radius: 2px;
  }
  .social-box {
    margin: 0 auto;
    padding: 38px;
    border-bottom: 1px #ccc solid;
  }
  .social-box a {
    font-weight: bold;
    font-size: 18px;
    padding: 8px;
  }
  .social-box a i {
    font-weight: bold;
    font-size: 20px;
  }
  .heading-desc {
    font-size: 20px;
    font-weight: bold;
    padding: 38px 38px 0px 38px;
  }
  .form-signin .form-signin-heading,
  .form-signin .checkbox {
    margin-bottom: 10px;
  }
  .form-signin .checkbox {
    font-weight: normal;
  }
  .form-signin .form-control {
    position: relative;
    font-size: 16px;
    height: 20px;
    padding: 20px;
    box-sizing: border-box;
  }
  .form-signin .form-control:focus {
    z-index: 2;
  }
  .form-signin input[type="text"] {
    margin-bottom: 10px;
    border-radius: 5px;
  }
  .form-signin input[type="password"] {
    margin-bottom: 10px;
    border-radius: 5px;
  }
  .login-footer {
    background: #f0f0f0;
    margin: 0 auto;
    border-top: 1px solid #dadada;
  }
  .login-footer .left-section a {
    font-weight: bold;
    color: #8a8a8a;
    line-height: 19px;
  }
  .mg-btm {
    margin-bottom: 20px;
  }
}
/* ... */

